Fix signup/signin form on mobile view

--- a/assets/sass/site.scss
+++ b/assets/sass/site.scss
@@ -1164,6 +1164,25 @@ body {
     }
   }
 
+  &.signup {
+    .signup-desktop-btn {
+      display: none;
+
+      @include breakpoint(lg) {
+        display: inline-block;
+      }
+    }
+
+    .signup-mobile-btn {
+      display: block;
+      margin: 10px auto;
+
+      @include breakpoint(lg) {
+        display: none;
+      }
+    }
+  }
+
   @include breakpoint(md) {
     text-align: left;
     position: absolute;
@@ -1235,11 +1254,15 @@ body {
   .input-box {
     margin-bottom: 10px;
     background: none;
+    border: 0;
     border-bottom: 2px solid #fff;
+    border-radius: 0;
     padding: 0;
     color: #fff;
     -webkit-text-fill-color: #fff!important;
     font-family: 'Brandon_Grotesque';
+    display: block;
+    margin: 0 auto 10px auto;
 
     &:-webkit-autofill {
       -webkit-box-shadow: 0 0 0px 1000px $brand-color-secondary inset;
@@ -1265,9 +1288,11 @@ body {
     padding: 0 20px;
     min-width: auto;
     font-size: 14px;
+    margin-top: 10px;
 
     @include breakpoint(md) {
       float: left;
+      margin-top: 0;
     }
   }
 
@@ -1338,10 +1363,12 @@ body {
 
     &:before {
       transform: translate(-50%,-50%) rotate(45deg);
+      -webkit-transform: translate(-50%,-50%) rotate(45deg);
     }
 
     &:after {
       transform: translate(-50%,-50%) rotate(-45deg);
+      -webkit-transform: translate(-50%,-50%) rotate(-45deg);
     }
   }
 
@@ -1367,9 +1394,8 @@ body {
     width: 15px;
     height: 15px;
     border: 1px solid white;
-    float: left;
     margin-right: 10px;
-    margin-bottom: 2.5em;
+    margin-bottom: 0;
     position: relative;
   }
 
@@ -3749,10 +3775,12 @@ body {
 
     &:before {
       transform: translate(-50%, -50%) rotate(45deg);
+      -webkit-transform: translate(-50%, -50%) rotate(45deg);
     }
 
     &:after {
       transform: translate(-50%, -50%) rotate(-45deg);
+      -webkit-transform: translate(-50%, -50%) rotate(-45deg);
     }
 
     &:hover {
